Upgrade dependencies and modernize and adjust to work with services for importing data